src/app.css
@import 'tailwindcss';

@plugin "tailwindcss-animate";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
	--radius-3xl: calc(var(--radius-lg) + 6px);
	--radius-2xl: calc(var(--radius-lg) + 4px);
	--radius-xl: calc(var(--radius-lg) + 2px);
	--radius-lg: 0.5rem;
	--radius-md: calc(var(--radius-lg) - 2px);
	--radius-sm: calc(var(--radius-lg) - 4px);
	--radius-xs: calc(var(--radius-lg) - 6px);

	--font-geist-sans:
		'Geist Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
		'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';

	--color-background: hsl(0, 0%, 98%);
	--color-foreground: hsl(0, 0%, 0%);

	--color-primary: hsl(0, 0%, 32%);
	--color-primary-foreground: hsl(0, 0%, 100%);

	--color-secondary: hsl(0, 0%, 90%);
	--color-secondary-foreground: hsl(0, 0%, 0%);

	--color-muted: hsl(0, 0%, 90%);
	--color-muted-foreground: hsl(0, 0%, 25%);

	--color-accent: hsl(0, 0%, 83%);
	--color-accent-foreground: hsl(0, 0%, 0%);

	--color-border: hsl(0, 0%, 32%);
	--color-ring: hsl(0, 0%, 0%);

	--color-info: hsl(226, 71%, 40%);
	--color-info-foreground: hsl(0, 0%, 100%);

	--color-success: hsl(142, 71%, 45%);
	--color-success-foreground: hsl(0, 0%, 0%);

	--color-warning: hsl(38, 92%, 50%);
	--color-warning-foreground: hsl(0, 0%, 0%);

	--color-danger: hsl(0, 70%, 35%);
	--color-danger-foreground: hsl(0, 0%, 100%);
}

@layer base {
	.dark {
		--color-background: hsl(0, 0%, 4%);
		--color-foreground: hsl(0, 0%, 100%);

		--color-secondary: hsl(0, 0%, 9%);
		--color-secondary-foreground: hsl(0, 0%, 100%);

		--color-muted: hsl(0, 0%, 9%);
		--color-muted-foreground: hsl(0, 0%, 64%);

		--color-accent: hsl(0, 0%, 15%);
		--color-accent-foreground: hsl(0, 0%, 100%);

		--color-border: hsl(0, 0%, 64%);
		--color-ring: hsl(0, 0%, 100%);
	}

	@font-face {
		font-family: 'Geist Sans';
		src: url('/fonts/geist-sans/variable/Geist[wght].ttf') format('truetype');
		font-weight: 100 900;
		font-style: normal;
		font-display: swap;
	}

	* {
		@apply border-border;

		&::selection {
			@apply bg-primary text-primary-foreground;
		}
	}

	html {
		scroll-behavior: smooth;
	}

	body {
		@apply bg-background font-geist-sans text-foreground min-h-screen w-full overflow-x-hidden;
	}

	p,
	li {
		@apply text-foreground/75 dark:text-muted-foreground;
	}

	.container {
		@apply mx-auto max-w-[1400px] px-8;
	}
}

